# arcsecond-service-platesolver-astrometry

./: Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: publish-image.yml
src/arcsecond_service_platesolver/: main.py  models.py  solver.py
